Mega refactor - pro max